Fixed image sizing
made files smaller on experience to load faster and cropped all the pictuers of the founders on about us to be the same size

--- a/style.css
+++ b/style.css
@@ -323,7 +323,6 @@ footer {
 .a-four {
     margin-left: 15px;
     margin-right: 15px ;
-    margin-top: 30px;
 }
 
 
